# rtk/src/main/java/com/rtk/controller/GradeController.java
@@ -1,15 +1,13 @@
 package com.rtk.controller;
 
-import com.rtk.dto.AverageGradeDTO;
+import com.rtk.dto.AverageGradeResponseDTO;
+import com.rtk.dto.UpdateGradeRequestDTO;
 import com.rtk.services.GradeService;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.NoSuchElementException;
 
 @RestController
 @RequestMapping("/grades")
@@ -19,23 +17,16 @@ public class GradeController {
     private GradeService gradeService;
 
     @GetMapping("/average")
-    public ResponseEntity<List<AverageGradeDTO>> getAverageGradesByGroup(@RequestParam int groupNumber) {
-        try {
-            List<AverageGradeDTO> averageGrades = gradeService.getAverageGradesByGroup(groupNumber);
-            return ResponseEntity.ok(averageGrades);
-        } catch (NoSuchElementException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(new ArrayList<>());
-        }
+    public ResponseEntity<List<AverageGradeResponseDTO>> getAverageGradesByGroup(@RequestParam int groupNumber) {
+        List<AverageGradeResponseDTO> averageGrades = gradeService.getAverageGradesByGroup(groupNumber);
+        return ResponseEntity.ok(averageGrades);
     }
 
 
-    @PutMapping("/student/{studentId}/subject/{subjectName}")
-    public ResponseEntity<String> updateGrade(@PathVariable int studentId, @PathVariable String subjectName, @RequestParam int newGrade) {
-        try {
-            gradeService.updateGrade(studentId, subjectName, newGrade);
-            return ResponseEntity.ok("Оценка ученика с id " + studentId + " по предмету " + subjectName + " обновлена");
-        } catch (NoSuchElementException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Ошибка: Ученик или предмет не найдены");
-        }
+    @PutMapping("/update")
+    public ResponseEntity<String> updateGrade(@RequestBody UpdateGradeRequestDTO updateGradeRequestDTO) {
+        gradeService.updateGrade(updateGradeRequestDTO);
+        return ResponseEntity.ok("Оценка ученика с id " + updateGradeRequestDTO.getStudentId() +
+                " по предмету " + updateGradeRequestDTO.getSubjectName() + " обновлена");
     }
 }
