# rtk/src/main/java/com/rtk/dto/AverageGradeResponseDTO.java
@@ -5,18 +5,14 @@ import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 
-import java.util.List;
-
 @Getter
 @Setter
 @AllArgsConstructor
 @NoArgsConstructor
-public class StudentWithGradesDTO {
+public class AverageGradeResponseDTO {
+    private int studentId;
     private String firstName;
     private String lastName;
-    private int age;
-    private int groupNumber;
-    private List<GradeDTO> grades;
-
+    private double averageGrade;
 }
 
